Fix button spacing in first section

--- a/css/style.css
+++ b/css/style.css
@@ -54,6 +54,9 @@
         #big-text {
             font-size: 26px;
         }
+        .btn {
+            font-size: 17px;
+        }
     }
     
     @media (min-width: 601px) {
@@ -78,8 +81,11 @@
         #big-text {
             font-size: 32px;
         }
+        .btn {
+            font-size: 19px;
+        }
     }
-    
+
     @media (max-width: 991px) {
         .main-title {
             margin-top: 80px;
@@ -170,6 +176,9 @@
         line-height: 0.9;
         text-transform: uppercase;
         font-weight: 600;
+    }
+
+    .nav-item a {
         font-size: 19px;
     }
     
